# Real-time-LeRobot_Inference_to_ROS2_Cartesian_Control_Bridge

./: .cursorrules  .pylintrc  AI_CONTEXT.md  MANIFEST.in  README.md  SETUP_GUIDE.md  debug_path.py  inspect_urdf.py  lerobot_functions.py  llms.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml
demo/: README.md  calibrate_gripper.py  debug_calibration.py  driver_launcher.py  follower_calibration_backup.csv  follower_calibration_old2.csv  follower_calibration_vizszintes_jo_fuggoleges_nem.csv  gripper_handler.py  gripper_values.csv  launcher.py  pickandplacetest.py  sculp.py  simple_move_test.py  test_ik_cartesian.py  test_motor_direction.py  test_raw_force.py  tune_wirst.py
demo/AR4/URDF/: ar4.urdf
demo/ROS/: ikpy_demo.py  ikpy_simple_demo.py  requirements.txt
demo/SO100/: README.md  backup_and_unlock_limits.py  calibrate_follower_transfer.py  calibrate_manual_candle.py  callibration_data.csv  callibration_so100.py  follower_calibration.csv  follower_calibration_old.csv  follower_calibration_raptor.csv  smart_so100.py  so100_control_driver.py  so100_driver.py
demo/SO100/URDF/: README.md
documentation/: README.md
documentation_translations/hu-HU/: README.md  SETUP_GUIDE.md
kinematics/: README.md  kineamtics_bridge.py  kinematics_bridge.py  urdf_based_kinematics_bridge.py
package/: README.md  __init__.py  requirements.txt
package/drivers/: README.md
package/drivers/SO100_Robot/: README.md  __init__.py  leader_robot.py
package/drivers/SO100_Robot/config/: README.md  SO100leader_to_cartesian_calibration.csv  factory_limits_backup.csv  follower_calibration.csv  gripper_values.csv  leader_gripper_value.csv  so100.urdf
package/drivers/SO100_Robot/scripts/: README.md  configuration_example.py  new_pick_and_place.py  pick_and_place_fast.py
package/drivers/SO100_Robot/so100_core/: __init__.py  kinematics.py  robot.py  robot_copilot.py  robot_gemini.py  so100_driver.py  sts3215.py  sts3215_copilot.py  sts3215_gemini.py
package/lerobot_interface/: README.md
package/ros_bridge/: README.md  zmq_ros2_bridge.py
package/ros_bridge/src/minimal_ros/: README.md  (+8 more)
package/ros_bridge/src/so100_teleoperation/: CMakeLists.txt  README.md  package.xml
package/ros_bridge/src/so100_teleoperation/config/: so100_teleoperation.yaml
package/ros_bridge/src/so100_teleoperation/launch/: so100_teleoperation.launch.py
package/ros_bridge/src/so100_teleoperation/scripts/: so100_follower_node.py  so100_leader_node.py  so100_teleop_coordinator.py
package/ros_bridge/tools/: serial_probe_so100.py  serial_test_so100.py
package/scripts/: README.md  calibrate_leader_candle.py  debug_coordination.py  get_follower_IP.py  lerobot_policy_demo.py  lerobot_teleop.py  lerobot_teleop_joint_feedback.py  lerobot_teleop_ros2_planned.py  lerobot_teleop_with_feedback.py  manual_calibration.py  plot_log.py  quick_test.py  test_gripper.py  test_leader_only.py  test_leader_positions.py  zmq_follower_node.py  zmq_hybrid_node.py  zmq_leader_node.py  zmq_to_http.py
package/universal_robot_control.egg-info/: SOURCES.txt  requires.txt  top_level.txt
package/utils/: __init__.py  file_utils.py  input_utils.py
universal_robot_control.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
visualisation/: README.md  main_viz.py  requirements.txt  so100_viz.py
