[metadata]
name = lerobot-based-teleop-connector
version = 0.1.0
author = Sandor Burian
description = LeRobot-based teleoperation connector for SO100 and AR4 (ZMQ / ROS2 / HTTP adapters)
long_description = file: README.md
long_description_content_type = text/markdown
license = MPL-2.0
url = https://github.com/buriansandor/Real-time-LeRobot_Inference_to_ROS2_Cartesian_Control_Bridge

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    pyserial
    pyzmq
    requests
    ikpy
    matplotlib

[options.packages.find]
where = .

[options.scripts]
scripts =
    package/scripts/zmq_leader_node.py
    package/scripts/zmq_hybrid_node.py
    package/scripts/zmq_follower_node.py
    package/scripts/lerobot_teleop.py
    package/scripts/lerobot_teleop_with_feedback.py
    package/scripts/lerobot_teleop_ros2_planned.py
    package/scripts/plot_log.py
    package/scripts/zmq_to_http.py
    package/scripts/zmq_to_ros2.py
